trying to fix white space in header

--- a/SASS/components/_grid.scss
+++ b/SASS/components/_grid.scss
@@ -1,9 +1,11 @@
 //Mobile First 320px
 
+
 .grid-container {
     display: grid;
-    grid-template-columns: auto; //100%;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
+    //margin: 15px ;
     grid-template-areas:
     "header"
     "navigation"
@@ -17,8 +19,12 @@
 
 header {
     grid-area: header;
-    display: grid;
-    grid-template-columns: 2fr .5fr .2fr 2fr;
+    // display: grid;
+    // grid-template-columns: 2fr .5fr .2fr 2fr;
+
+    display: flex;
+    justify-content: space-between;
+
     background-color: $main-accent;
     color: whitesmoke;
     height: 80px;
@@ -29,6 +35,7 @@ header {
     font-size: 24px;
     margin-top: 15px;
     padding-left: 10px;
+    justify-self: flex-start;
     
   }
 
@@ -36,36 +43,48 @@ header {
 .vertical-line {
     height: 40px;
     //position: absolute;
-    left: 57%;
-    margin-left: -3px;
+    //left: 57%;
+    //margin-left: -3px;
     top: 0;
     margin-top: 15px;
     border-left: 1px solid $gray;
     position: relative;
+
+    justify-self: center;
+
     }
 
-//bell in images file
+//bell-svg in images file
+
+//Grouping of top items in header
+#top-info {
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+}
 
 
-
-#notifications 
 //current-user and top-name
-{
+#notifications {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
     grid-gap: 10px;
-    width: 70px;
-    height: 1%;
+
+    justify-self: center;
+
+    //width: 70px;
+   // height: 1%;
     margin-top: 15px;
-    margin-left: 5px;
+    //margin-left: 5px;
+    
 
 }
 
 
 
 .top-name {
-    margin-left: 10px;
+    //margin-left: 10px;
     margin-top: 15px;
 }
 
