--- a/SASS/components/_images.scss
+++ b/SASS/components/_images.scss
@@ -24,8 +24,9 @@
 
 .bell-svg {
     width: 30px;
-    margin-top: 25px;
+    //margin-top: 25px;
     fill: whitesmoke;
+    //justify-self: center;
 }
 
 //profile pic on top
@@ -39,7 +40,7 @@
 .profile-image {
     width: 60px;
     border-radius: 60%;
-    margin-left: 45%;
+    //margin-left: 45%;
 }
 
 
